перевели на 2.6.3 версию